; ModuleID = '/home/carl/AnghaBench/linux/drivers/iommu/extr_amd_iommu.c_amd_iommu_flush_tlb_domid.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iommu/extr_amd_iommu.c_amd_iommu_flush_tlb_domid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amd_iommu = type { i32 }
%struct.iommu_cmd = type { i32 }

@CMD_INV_IOMMU_ALL_PAGES_ADDRESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.amd_iommu*, i32)* @amd_iommu_flush_tlb_domid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @amd_iommu_flush_tlb_domid(%struct.amd_iommu* %0, i32 %1) #0 {
  %3 = alloca %struct.amd_iommu*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.iommu_cmd, align 4
  store %struct.amd_iommu* %0, %struct.amd_iommu** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @CMD_INV_IOMMU_ALL_PAGES_ADDRESS, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @build_inv_iommu_pages(%struct.iommu_cmd* %5, i32 0, i32 %6, i32 %7, i32 1)
  %9 = load %struct.amd_iommu*, %struct.amd_iommu** %3, align 8
  %10 = call i32 @iommu_queue_command(%struct.amd_iommu* %9, %struct.iommu_cmd* %5)
  %11 = load %struct.amd_iommu*, %struct.amd_iommu** %3, align 8
  %12 = call i32 @iommu_completion_wait(%struct.amd_iommu* %11)
  ret void
}

declare dso_local i32 @build_inv_iommu_pages(%struct.iommu_cmd*, i32, i32, i32, i32) #1

declare dso_local i32 @iommu_queue_command(%struct.amd_iommu*, %struct.iommu_cmd*) #1

declare dso_local i32 @iommu_completion_wait(%struct.amd_iommu*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
